# Cmake_Libraries

./: CMakeLists.txt
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/Foo/: CMakeLists.txt  Hello.h
foo/src/: CMakeLists.txt
foo/src/Foo/: CMakeLists.txt  Hello.cpp
